fix: :bug: adjusted multiple things
added skip counter, fixed XP bar placement, fixed black moon not showing

--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -4,3 +4,8 @@
 .notDueYet {
   color: gray;
 }
+
+.seperator {
+  margin-top: 1em;
+  border-top: 2px solid #bbb;
+}
