--- a/src/app/components/xp-progress-bar/xp-progress-bar.component.scss
+++ b/src/app/components/xp-progress-bar/xp-progress-bar.component.scss
@@ -2,8 +2,8 @@
   width: 100%;
   height: 25px;
   background-color: #222;
-  position: absolute;
-  bottom: 8px;
+  position: fixed;
+  bottom: 1em;
 }
 
 .progress-bar-fill {
